--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html lang="en">
 <head>
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+
     <title>ringcode | redirect</title>
     <script type="text/javascript">
         location.replace("generate.html");
