Add workaround for CV not loading
 - not sure how to execute function in JS module, from the scope of the HTML page
 - onload results in a syntax error in WebStorm

--- a/reader.html
+++ b/reader.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>ringcode | read</title>
     <script type="module" src="script/read/script.js"></script>
-    <script id="cv" async defer src="https://docs.opencv.org/master/opencv.js" type="text/javascript"></script>
+    <script id="cv" async defer onload="window.cvLoaded = true;" src="https://docs.opencv.org/master/opencv.js"
+            type="text/javascript"></script>
     <link href="https://fonts.googleapis.com/css?family=Ubuntu+Mono" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.min.css">
     <script defer src="https://use.fontawesome.com/releases/v5.1.0/js/all.js"></script>
